Fix project icons size on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -235,7 +235,7 @@
   .project-icons {
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 0.5rem;
   }
   
   .project-icons figure {
@@ -251,7 +251,7 @@
   }
 
   .project-icons img {
-    width: 80%;
+    width: 50%;
   }
 
   .project-icons figure:nth-child(2) {
